--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <title>University Phone App</title>
 </head>
 
-<body style="height: 100%">
+<body style="height: 100%; background: #ecf0f1">
   <div id="app" style="overflow-x: hidden; overflow-y: auto; height: 100%;"></div>
 
   <script>
