--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <title>University Phone App</title>
 </head>
 
-<body style="height: 100%; background: #f5f6fa">
+<body style="height: 100%; background: #ffffff">
   <div id="app" style="overflow-x: hidden; overflow-y: auto; height: 100%;"></div>
 
   <script>
